# daemon

./: .editorconfig  .envrc  .gitattributes  .gitignore  .mcp.json  Architecture.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  PULL_REQUEST.md  README.md  RELEASING.md  SECURITY.md  TODO.md  build.rs  deny.toml  linecheck.yml  lychee.toml  package.json  pnpm-lock.yaml  prebuilt-client.html  prebuilt.html  typos.toml
.cargo/: config.toml
.changeset/: 1pct-temp-clone.md  README.md  add-cli-enable-disable-routine.md  add-pi-agent-support.md  add-react-client.md  add-run-summary-endpoint.md  agent-command-availability.md  api-request-timeout.md  atomic-write-enospc-regression-test.md  atomic-write-propagate-io-errors.md  auto-pull-repos.md  auto-refresh-routine-logs-view.md  bin-dir-checks-executable-bit.md  block-in-place-crontab-sync.md  bound-log-read-size.md  bump-clap-tokio-patch.md  bump-clap-uuid-patch.md  bump-cron-parser.md  bump-cron-union-1.0.2.md  bump-eslint-plugin-react-hooks.md  bump-jiff-syn-patch.md  bump-libc-tokio-util-patch.md  bump-openapi-fetch-0-17-0.md  bump-react-dom.md  bump-react-router-dom.md  bump-rmcp-2-2-0.md  bump-rmcp-2.md  bump-tokio-1-53.md  bump-tokio-console-log.md  bump-typescript.md  bump-vitejs-plugin-react.md  bump-yew-router-yew.md  cache-control-no-store.md  cap-agent-log-on-watchdog-tick.md  claude-json-prune-error-paths.md  cleanup-freed-bytes.md  clear-pets-relax.md  cli-commands-folder.md  cli-enable-disable-routine.md  cli-enable-disable.md  (+413 more)
.claude/: .gitignore  settings.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: actionlint.yml  auto-release.yml  cargo-deny.yml  changelog.yml  changeset-release.yml  codeql.yml  cut-release.yml  doc.yml  lint.yml  lychee.yml  prebuilt-client.yml  prebuilt-ui.yml  prebuilt.yml  publish.yml  release.yml  spellcheck.yml  test.yml
apis/: graphql.graphql  openapi.json
client/: .gitignore  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
client/src/: App.test.tsx  App.tsx  main.tsx  routes.tsx  styles.css
docs/: comparison.md  moadim.1
npm/moadim/: README.md  package.json
schemas/: job.example.toml  job.schema.json  routine.example.toml  routine.schema.json
scripts/: check-readme-blocks.sh
scripts/release/: version-and-sync.mjs
src/: banner.rs  banner_tests.rs  build_info.rs  build_info_tests.rs  cli.rs  cli_cleanup_bytes_tests.rs  cli_json_tests.rs  cli_query.rs  cli_query_tests.rs  cli_restart.rs  cli_restart_tests.rs  cli_spawn_tests.rs  cli_system.rs  cli_system_tests.rs  cli_tests.rs  commands.rs  commands_http.rs  commands_tests.rs  cron_jobs.rs  cron_jobs_tests.rs  error.rs  error_tests.rs  fs_location.rs  fs_location_tests.rs  global_lock.rs  global_lock_tests.rs  lib.rs  logging.rs  logging_tests.rs  main.rs  mcp.rs  middleware.rs  network_cli.rs  openapi.rs  openapi_tests.rs  restart.rs  restart_tests.rs  routine_storage.rs  routine_storage_compiled_prompt_migration_tests.rs  routine_storage_env_tests.rs  (+28 more)
src/cli/: bind.rs  bind_override_tests.rs  bind_tests.rs  completions.rs  completions_tests.rs  help_tests.rs  json_tests.rs  mod.rs  query.rs  query_tests.rs  restart.rs  spawn_error_tests.rs  spawn_tests.rs  system.rs  system_tests.rs  tests.rs
src/filesystem/: fs_location_tests.rs  mod.rs
src/logging/: mod.rs  tests.rs
src/machine/: mod.rs  mod_tests.rs
src/middlewares/: fs_location.rs  fs_location_tests.rs  host_validation.rs  host_validation_tests.rs  logger.rs  logger_tests.rs  mod.rs  security_headers.rs  security_headers_tests.rs  timeout.rs  timeout_tests.rs
src/paths/: mod.rs  mod_tests.rs
src/platform/: mod.rs  schedule.rs  schedule_tests.rs  windows.rs
src/routes/: CONTRIBUTING.md  cron_jobs.rs  graphql.rs  http.rs  http_client_tests.rs  http_listener.rs  http_listener_lock_tests.rs  http_listener_tests.rs  http_routing_tests.rs  http_settings_routes.rs  http_settings_routes_tests.rs  http_tests.rs  mcp.rs  mcp_lock_tests.rs  mcp_parity_tests.rs  mcp_prompt_preview_tests.rs  mcp_routine_lifecycle_tests.rs  mcp_tests.rs  mcp_types.rs  metrics.rs  metrics_tests.rs  mod.rs
src/routines/: cleanup.rs  cleanup_tests.rs  command.rs  command_bin_resolution_tests.rs  command_env_tests.rs  command_path_resolution.rs  command_placeholder_tests.rs  command_prompt.rs  command_run_id_tests.rs  command_system_prompt.rs  command_tests.rs  command_trigger_source_tests.rs  command_umask_tests.rs  concurrency_cap.rs  concurrency_cap_tests.rs  defaults.rs  defaults_tests.rs  flags.rs  flags_tests.rs  handlers.rs  handlers_tests.rs  (+48 more)
static/: index.html
tests/: types_test.rs
ui/: Cargo.toml  Trunk.toml  index.html  styles.css
ui/src/: command_palette.rs  command_palette_match.rs  command_palette_tests.rs  cron_jobs.rs  cron_jobs_tests.rs  cron_utils.rs  cron_utils_tests.rs  day_timeline.rs  day_timeline_tests.rs  header.rs  health.rs  log_viewer.rs  log_viewer_tests.rs  logs.rs  logs_tests.rs  machines.rs  main.rs  overview.rs  overview_attention.rs  overview_recent_runs.rs  overview_stats.rs  overview_tests.rs  overview_upcoming.rs  refresh.rs  refresh_tests.rs  reliability.rs  reliability_stats.rs  reliability_stats_tests.rs  routines.rs  routines_tests.rs  schedule.rs  schedule_heatmap.rs  schedule_heatmap_grid.rs  schedule_heatmap_tests.rs  schedule_tests.rs  settings.rs  settings_tests.rs  shell_dialogs.rs  shell_state.rs
ui/src/routines/: actions.rs  banner.rs  bulk.rs  bulk_actions.rs  calendar.rs  calendar_tests.rs  filter.rs  filter_bar.rs  filter_distinct.rs  filter_distinct_tests.rs  filter_facet_codec_tests.rs  filter_health_tests.rs  filter_tests.rs  flags_panel.rs  form.rs  form_tests.rs  history.rs  history_tests.rs  hooks.rs  logs.rs  mod.rs  model.rs  model_tests.rs  page.rs  row.rs  saved_views.rs  saved_views_tests.rs  sparkline.rs  sparkline_tests.rs  state.rs  state_group_by_tests.rs  state_tests.rs  table.rs
xtask/: Cargo.toml
(+284 files in other folders)
